--- a/Tool_Warehouse_Management_System/Tool_Warehouse_Management_System/Tool_Warehouse_Management_System.csproj
+++ b/Tool_Warehouse_Management_System/Tool_Warehouse_Management_System/Tool_Warehouse_Management_System.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tool_Warehouse_Management_System.DataAccess\Tool_Warehouse_Management_System.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
