makedDB_Connection_in_appSettings

--- a/Tool_Warehouse_Management_System/Tool_Warehouse_Management_System/appsettings.json
+++ b/Tool_Warehouse_Management_System/Tool_Warehouse_Management_System/appsettings.json
@@ -7,4 +7,8 @@
     }
   },
   "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "ToolWarehouseDatabaseConnection": "Data Source=DESKTOP-RRLI5LA\\TOOLWARDATABASE;Initial Catalog=ToolWarehouseStorage;Integrated Security=True"
+  }
 }
+
