createdToolWarehouseController_itS_Working

--- a/Tool_Warehouse_Management_System/Tool_Warehouse_Management_System/appsettings.json
+++ b/Tool_Warehouse_Management_System/Tool_Warehouse_Management_System/appsettings.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "ToolWarehouseDatabaseConnection": "Data Source=DESKTOP-RRLI5LA\\TOOLWARDATABASE;Initial Catalog=ToolWarehouseStorage;Integrated Security=True"
   }
